Architecture: Migrate to micro services: create JHipster gateway (#3954)